--- a/html/assets/css/styles.css
+++ b/html/assets/css/styles.css
@@ -142,6 +142,8 @@ p {
     font-weight: 400;
     line-height: 20px;
     font-family: "Inria Sans", sans-serif;
+    color: white;
+
 }
 
 button {
